--- a/atv11.html
+++ b/atv11.html
@@ -10,10 +10,10 @@
   <div class="calculadora">
     <label for="operation">Operação:</label>
     <select id="operation">
-      <option value="adicao">Adição (+)</option>
-      <option value="subtracao">Subtração (-)</option>
-      <option value="multiplicacao">Multiplicação (*)</option>
-      <option value="divisao">Divisão (/)</option>
+      <option value="adicao">Adição</option>
+      <option value="subtracao">Subtração</option>
+      <option value="multiplicacao">Multiplicação</option>
+      <option value="divisao">Divisão</option>
     </select><br>
     <label for="n1">Primeiro número:</label>
     <input type="numero" id="n1"><br>
