--- a/atv11.html
+++ b/atv11.html
@@ -7,13 +7,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Calculadora</h1>
   <div class="calculadora">
     <label for="operation">Operação:</label>
     <select id="operation">
-      <option value="adicao">Adição</option>
-      <option value="subtracao">Subtração</option>
-      <option value="multiplicacao">Multiplicação</option>
-      <option value="divisao">Divisão</option>
+      <option value="Adicao">Adição</option>
+      <option value="Subtracao">Subtração</option>
+      <option value="Multiplicacao">Multiplicação</option>
+      <option value="Divisao">Divisão</option>
     </select><br>
     <label for="n1">Primeiro número:</label>
     <input type="numero" id="n1"><br>
@@ -21,14 +22,9 @@
     <input type="numero" id="n2"><br>
     <button onclick="calculadora()">Calcular</button><br>
    
-   
-
 
     <p>O resultado é : <span class="resultado"></span></p>
  
-
-
-
 
   </div>
   <script src="atv11.js"></script>
