--- a/atv11.html
+++ b/atv11.html
@@ -20,10 +20,10 @@
     <input type="numero" id="n1"><br>
     <label for="n2">Segundo número:</label>
     <input type="numero" id="n2"><br>
-    <button onclick="calculadora()">Calcular</button><br>
+    <button onclick="Calculadora()">Calcular</button><br>
    
 
-    <p>O resultado é : <span class="resultado"></span></p>
+    <p>O resultado é : <span class="result"></span></p>
  
 
   </div>
